fable/test/valid/goto_forms.f
      program prog
      goto i (10, 20)
      goto i, (10, 20)
      goto (10, 20) i
      goto (10, 20), i
10    continue
20    continue
      end
