fable/test/semantic_error/inquire_both_unit_and_file.f
      program prog
      inquire(10, file='fable_tmp')
      end
